<resources>
    <string name="app_name">LAYOUTindex Demo</string>

    <!--Splash Activity-->
    <string name="text_splash">LAYOUTindex Demo</string>

    <!--Detail Activity-->
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="searchID">User ID</string>
    <string name="searchButton">Search</string>
    <string name="available">AVAILABLE USERS</string>
    <string name="close">Close</string>
</resources>
