<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    android:id="@+id/llRow"
    android:paddingBottom="40dp"
    android:paddingTop="40dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"/>

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/fName"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:textSize="14dp"
        android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textAlignment="gravity"
            android:textSize="14dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/lName"
            android:textStyle="bold"
            android:textAlignment="gravity"
            android:textSize="14dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textAlignment="gravity"
            android:textSize="14dp"
            android:textColor="@color/black"/>

    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textAlignment="gravity"
                    android:textSize="14dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textAlignment="gravity"
                    android:textSize="14dp"
                    android:textColor="@color/black"/>

            </LinearLayout>


        </LinearLayout>

</LinearLayout>